--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 header
 {
-  background-image: url(grey.jpg);
+  background-image: url(download.jpg);
   height: 100vh;
   background-size: cover;
   background-position: center;
@@ -24,7 +24,7 @@ header
 }
 
 .mainnav li a {
-  color: white;
+  color: black;
   text-decoration: none;
   padding: 5px 20px;
   font-family: "Roboto", sans-serif;
@@ -32,11 +32,11 @@ header
 }
 
 .mainnav li.active a {
-  border: 1px solid white;
+  border: 1px solid black;
 }
 
 .mainnav li a:hover {
-  border: 1px solid white;
+  border: 1px solid black;
 
 }
 
