--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 header
 {
-  background-image: url(download.jpg);
+  background-image: url(images/download.jpg);
   height: 100vh;
   background-size: cover;
   background-position: center;
